# dynamo

./: .gitignore  Main.hs  README.md  dynamo.cabal  dynamodb.cabal
examples/: Person.hs
spec/: Main.hs
src/Web/AWS/: DynamoDB.hs
src/Web/AWS/DynamoDB/: Abstract.hs  Client.hs  Commands.hs  Core.hs  CreateTable.hs  DeleteItem.hs  DeleteTable.hs  DescribeTable.hs  GetItem.hs  Helpers.hs  ListTables.hs  PutItem.hs  QQ.hs  Query.hs  Scan.hs  Table.hs  Types.hs  UpdateItem.hs  UpdateTable.hs  Util.hs
