name:                dynamo
version:             0.1.0.0
synopsis:            API Bindings to the AWS DynamoDB service
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           Vertigo Music Inc. (c) 2014
category:            Web, DB
build-type:          Simple
cabal-version:       >=1.10
description:
    .
    <<https://stripe.com/img/navigation/logo@2x.png>>
    .
    [DynamoDB - <https://aws.amazon.com/dynamodb>]
    DynamoDB is a Key-Value store offering by Amazon Web Services that manages and maintains your data while providing limitless scalability
    .
    [100% Haddock Coverage]
    All code written for this library is documented to completion with the haddock documentation tool
    .
    [50+ Hspec Tests] Thoroughly unit-tested with hspec.
    All API commands are unit-tested before inclusion into the API (see the tests directory).
    To run the tests, perform the following:
    .
    >  cabal clean && cabal configure --enable-tests && cabal build spec && dist/build/spec/spec
    .

    [Database Operations - <https://stripe.com/docs/api#pagination>]
    To get started implement the `ToDynamo` typeclass on your types.
    By default the DynamoDB API transmits all data in JSON format. Our types take care of that for you, all that isn needed is to implement the `ToDynamo` typeclass.
    .
    > import Web.AWS.DynamoDB
    > 
    > main :: IO ()
    > main = do
    >   let config = DynamoConfig "public key" "secret key"
    >   print =<< dynamo config listTablesDefault 
    >
    .
library
  exposed-modules:     Web.AWS.DynamoDB
  other-modules:       Web.AWS.DynamoDB.Helpers
                     , Web.AWS.DynamoDB.Client
  hs-source-dirs:      src
  build-depends:       aeson
                     , aws-general
                     , base >=4.7 && <4.8
                     , bytestring
                     , case-insensitive
                     , either
                     , http-types
                     , mtl
                     , pipes
                     , pipes-aeson
                     , pipes-attoparsec
                     , pipes-bytestring
                     , pipes-http
                     , text
                     , time
                     , transformers
  default-language:    Haskell2010

Test-Suite spec
    type:             exitcode-stdio-1.0
    hs-source-dirs:   spec
    main-is:          Main.hs
    build-depends:    base, dynamo
    default-language: Haskell2010
    ghc-options:      -Wall
