name:                dynamo
version:             0.1.0.0
synopsis:            API Bindings to the AWS DynamoDB service
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           Vertigo Music Inc. (c) 2014
category:            Web, DB
build-type:          Simple
cabal-version:       >=1.10
description:
    .
    <<http://i.imgur.com/PsFo6bM.jpg>>
    .
    [DynamoDB - <https://aws.amazon.com/dynamodb>]
    DynamoDB is a Key-Value store offering by Amazon Web Services that manages and maintains your data while providing limitless scalability
    .
    [Original Paper]
    <http://www.allthingsdistributed.com/files/amazon-dynamo-sosp2007.pdf>
    .
    [100% Haddock Coverage]
    All code written for this library is documented to completion with the haddock documentation tool
    .
    [Limitations]
    Batch operations + Scan currently unsupported. 
    .

    [Database Operations - <http://docs.aws.amazon.com/amazondynamodb/latest/APIReference/Welcome.html>]
    To get started implement the `ToDynamo` typeclass on your types.
    By default the DynamoDB API transmits all data in JSON format. Our types take care of that for you, all that isn needed is to implement the `ToDynamo` typeclass.
    .
    > import Web.AWS.DynamoDB.Client ( dynamo )
    > import Web.AWS.DynamoDB.Types  ( Region( USEast1 ), DynamoConfig (..), PublicKey (..), SecretKey (..) )
    > import Network.Http.Client     ( withManager
    > import Network.Http.Client.Tls ( tlsSettings )
    > 
    > 
    > main :: IO ()
    > main = 
    >   withManager tlsSettings $ \mgr -> do
    >     let config = DynamoConfig (PublicKey "public key") (SecretKey "secret key") mgr USEast1
    >     print =<< dynamo config allTables
    >
    .
library
  exposed-modules:     Web.AWS.DynamoDB.Client
                     , Web.AWS.DynamoDB.Query
                     , Web.AWS.DynamoDB.Types
                     , Web.AWS.DynamoDB.DeleteItem
                     , Web.AWS.DynamoDB.GetItem
                     , Web.AWS.DynamoDB.PutItem
                     , Web.AWS.DynamoDB.UpdateItem
                     , Web.AWS.DynamoDB.CreateTable
                     , Web.AWS.DynamoDB.ListTables
                     , Web.AWS.DynamoDB.DescribeTable
                     , Web.AWS.DynamoDB.UpdateTable
                     , Web.AWS.DynamoDB.DeleteTable
                     , Web.AWS.DynamoDB.QQ
  other-modules:       Web.AWS.DynamoDB.Util

  hs-source-dirs:      src
  build-depends:       aeson
                     , attoparsec
                     , aws-general
                     , base        >=4.7 && <4.8
                     , base64-bytestring
                     , bytestring
                     , cereal
                     , containers  >= 0.5.5.1
                     , hspec       >= 2.1.2
                     , http-client >= 0.4.6.1
                     , http-client-tls >= 0.2.2
                     , http-types
                     , io-streams
                     , io-streams-http
                     , retry
                     , scientific  >= 0.3.3.3
                     , template-haskell
                     , text
                     , time
                     , unordered-containers
                     , vector >= 0.10.12.2
  default-language:    Haskell2010

Test-Suite spec
    type:             exitcode-stdio-1.0
    hs-source-dirs:   spec
    main-is:          Main.hs
    build-depends:    base
                    , containers >= 0.5.5.1
                    , dynamo
                    , hspec
                    , hspec >= 2.1.2
                    , http-client >= 0.4.6.1
                    , http-client-tls >= 0.2.2
                    , scientific >= 0.3.3.3
                    , vector >= 0.10.12.2
    default-language: Haskell2010
    ghc-options:      -Wall
