name:                dynamo
version:             0.1.0.0
synopsis:            API Bindings to the AWS DynamoDB service
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           Vertigo Music Inc. (c) 2015
category:            Web, DB
build-type:          Simple
cabal-version:       >=1.10
description:
    .
    <<http://i.imgur.com/PsFo6bM.jpg>>
    .
    [DynamoDB - <https://aws.amazon.com/dynamodb>]
    DynamoDB is a Key-Value store offering by Amazon Web Services that manages and maintains your data while providing limitless scalability
    .
    [Original Paper]
    <http://www.allthingsdistributed.com/files/amazon-dynamo-sosp2007.pdf>
    .
    [100% Haddock Coverage]
    All code written for this library is documented to completion with the haddock documentation tool
    .
    [Limitations]
    Batch operations + Scan currently unsupported. 
    .
    This is Oz's Code, ported to use an io-streams backend
library
  exposed-modules:     Web.AWS.DynamoDB.Client
                     , Web.AWS.DynamoDB.Core
                     , Web.AWS.DynamoDB.Query
                     , Web.AWS.DynamoDB.Table
                     , Web.AWS.DynamoDB.Scan
                     , Web.AWS.DynamoDB.Types
                     , Web.AWS.DynamoDB.DeleteItem
                     , Web.AWS.DynamoDB.GetItem
                     , Web.AWS.DynamoDB.PutItem
                     , Web.AWS.DynamoDB.UpdateItem
                     , Web.AWS.DynamoDB.Commands
  other-modules:       Web.AWS.DynamoDB.Util

  hs-source-dirs:      src
  build-depends:       aeson
                     , attoparsec
                     , aws-general     >= 0.2.1
                     , base
                     , base64-bytestring
                     , bytestring
                     , cereal
                     , containers      >= 0.5.5.1
                     , data-default    >= 0.5.3
                     , http-client >= 0.4.9
                     , http-types
                     , io-streams
                     , io-streams-http
                     , retry
                     , scientific      >= 0.3.3.3
                     , tagged          >= 0.7.3
                     , text
                     , time
                     , unordered-containers
                     , uuid
                     , vector          >= 0.10.12.2
  default-language:    Haskell2010

Test-Suite spec
    type:             exitcode-stdio-1.0
    hs-source-dirs:   spec
    main-is:          Main.hs
    build-depends:    base
                    , containers      >= 0.5.5.1
                    , data-default    >= 0.5.3
                    , dynamo
                    , hspec
                    , http-client >= 0.4.9
                    , http-client-streams
                    , retry
                    , scientific      >= 0.3.3.3
                    , tagged          >= 0.7.3
                    , text
                    , vector          >= 0.10.12.2
    default-language: Haskell2010
    ghc-options:      -Wall
